# Shikimaru

./: .env.example  .gitignore  README.md  docker-compose.yml
android_app/: README.md  pubspec.yaml
android_app/android/app/: build.gradle.kts
android_app/lib/: main.dart  theme.dart
android_app/lib/models/: ask_models.dart  health_response.dart  job_event.dart  plan_models.dart  project_info.dart
android_app/lib/providers/: connection_provider.dart  job_provider.dart  project_provider.dart
android_app/lib/screens/: chat_screen.dart  execution_screen.dart  plan_review_screen.dart  project_picker_screen.dart  settings_screen.dart
android_app/lib/services/: runner_api.dart
android_app/lib/widgets/: choice_buttons.dart  log_viewer.dart  message_bubble.dart  (+3 more)
android_app/test/: widget_test.dart
android_app/web/: index.html  manifest.json
runner/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  ruff.toml
runner/runner/: __init__.py  config.py  main.py  models.py  state_machine.py
runner/runner/routers/: __init__.py  approve.py  ask.py  events.py  execute.py  health.py  plan.py  projects.py
runner/runner/services/: __init__.py  cursor_invoker.py  job_manager.py  project_discovery.py  prompt_templates.py
runner/runner/templates/: __init__.py
runner/runner/templates/.cursor/rules/: project.md
runner/tests/: __init__.py  test_cursor_invoker.py  test_job_manager.py  test_project_discovery.py  test_state_machine.py
runner/web_app/: .last_build_id  flutter_bootstrap.js  index.html  main.dart.js  version.json
runner/web_app/assets/: NOTICES
(+2 files in other folders)
